# windows-tools

./: CMakeLists.txt  export.cpp  main.cpp  merge.cpp
download/: download.js
mcp/: doc.txt  mcp.cpp  test_ask_tool.sh
